@@ -6,13 +6,13 @@
  */
 package com.evolveum.midpoint.provisioning.impl.dummy;
 
+import static com.evolveum.midpoint.schema.constants.SchemaConstants.*;
+
 import static java.util.Objects.requireNonNull;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.AssertJUnit.*;
 
 import static com.evolveum.midpoint.schema.GetOperationOptions.createNoFetchCollection;
-import static com.evolveum.midpoint.schema.constants.SchemaConstants.ICFS_PASSWORD;
-import static com.evolveum.midpoint.schema.constants.SchemaConstants.RI_ACCOUNT_OBJECT_CLASS;
 import static com.evolveum.midpoint.test.IntegrationTestTools.assertProvisioningAccountShadow;
 import static com.evolveum.midpoint.test.asserter.predicates.StringAssertionPredicates.startsWith;
 import static com.evolveum.midpoint.test.asserter.predicates.TimeAssertionPredicates.approximatelyCurrent;
@@ -25,6 +25,8 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
+
+import com.evolveum.midpoint.test.DummyDefaultScenario;
 
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
@@ -42,17 +44,15 @@ import com.evolveum.midpoint.prism.*;
 import com.evolveum.midpoint.prism.crypto.EncryptionException;
 import com.evolveum.midpoint.prism.delta.DiffUtil;
 import com.evolveum.midpoint.prism.delta.ObjectDelta;
-import com.evolveum.midpoint.prism.impl.schema.PrismSchemaImpl;
 import com.evolveum.midpoint.prism.match.MatchingRule;
 import com.evolveum.midpoint.prism.path.ItemPath;
-import com.evolveum.midpoint.prism.schema.PrismSchema;
 import com.evolveum.midpoint.prism.util.PrismAsserts;
 import com.evolveum.midpoint.prism.util.PrismTestUtil;
 import com.evolveum.midpoint.prism.xnode.MapXNode;
 import com.evolveum.midpoint.prism.xnode.PrimitiveXNode;
 import com.evolveum.midpoint.provisioning.impl.ProvisioningContext;
 import com.evolveum.midpoint.provisioning.impl.resources.ConnectorManager;
-import com.evolveum.midpoint.provisioning.ucf.api.AttributesToReturn;
+import com.evolveum.midpoint.provisioning.ucf.api.ShadowItemsToReturn;
 import com.evolveum.midpoint.provisioning.ucf.api.ConnectorInstance;
 import com.evolveum.midpoint.schema.*;
 import com.evolveum.midpoint.schema.constants.MidPointConstants;
@@ -93,10 +93,10 @@ import com.evolveum.prism.xml.ns._public.types_3.RawType;
 @Listeners({ com.evolveum.midpoint.tools.testng.AlphabeticalMethodInterceptor.class })
 public class AbstractBasicDummyTest extends AbstractDummyTest {
 
-    protected CachingMetadataType capabilitiesCachingMetadataType;
-    protected String willIcfUid;
-    protected XMLGregorianCalendar lastPasswordModifyStart;
-    protected XMLGregorianCalendar lastPasswordModifyEnd;
+    private CachingMetadataType capabilitiesCachingMetadataType;
+    String willIcfUid;
+    private XMLGregorianCalendar lastPasswordModifyStart;
+    private XMLGregorianCalendar lastPasswordModifyEnd;
 
     protected MatchingRule<String> getUidMatchingRule() {
         return null;
@@ -111,12 +111,14 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     }
 
     protected int getExpectedRefinedSchemaDefinitions() {
-        return dummyResource.getNumberOfObjectclasses();
+        return dummyResource.getNumberOfObjectClasses();
     }
 
     @AfterClass
     public static void assertCleanShutdown() {
-        dummyResource.assertNoConnections();
+        if (resourceShutDown) {
+            dummyResource.assertNoConnections();
+        }
     }
 
     @Test
@@ -138,7 +140,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertSuccess(result);
 
         // Check connector schema
-        IntegrationTestTools.assertConnectorSchemaSanity(connector, prismContext);
+        IntegrationTestTools.assertConnectorSchemaSanity(connector);
 
         IntegrationTestTools.assertNoSchema(resource);
     }
@@ -168,22 +170,21 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
             XmlSchemaType xmlSchemaType = conn.getSchema();
             assertNotNull("xmlSchemaType is null", xmlSchemaType);
-            Element connectorXsdSchemaElement = ConnectorTypeUtil.getConnectorXsdSchema(conn);
-            assertNotNull("No schema", connectorXsdSchemaElement);
+            Element connectorXsdSchemaElement = ConnectorTypeUtil.getConnectorXsdSchemaElementRequired(conn);
 
             // Try to parse the schema
-            PrismSchema schema = PrismSchemaImpl.parse(connectorXsdSchemaElement, true, "connector schema " + conn, prismContext);
+            ConnectorSchema schema = ConnectorSchemaFactory.parse(connectorXsdSchemaElement, "connector schema " + conn);
             assertNotNull("Cannot parse schema", schema);
             assertFalse("Empty schema", schema.isEmpty());
 
             displayDumpable("Parsed connector schema " + conn, schema);
 
             QName configurationElementQname = new QName(conn.getNamespace(), ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart());
-            PrismContainerDefinition configurationContainer = schema
-                    .findContainerDefinitionByElementName(configurationElementQname);
+            var configurationContainer = schema.findContainerDefinitionByElementName(configurationElementQname);
             assertNotNull("No " + configurationElementQname + " element in schema of " + conn, configurationContainer);
-            PrismContainerDefinition definition = schema
-                    .findItemDefinitionByElementName(new QName(ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart()),
+            var definition =
+                    schema.findItemDefinitionByElementName(
+                            new QName(ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart()),
                             PrismContainerDefinition.class);
             assertNotNull("Definition of <configuration> property container not found", definition);
             assertFalse("Empty definition", definition.isEmpty());
@@ -233,7 +234,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
             XmlSchemaType xmlSchemaType = resourceType.getSchema();
             if (xmlSchemaType != null) {
-                Element xsdSchemaElement = ResourceTypeUtil.getResourceXsdSchema(resourceType);
+                Element xsdSchemaElement = ResourceTypeUtil.getResourceXsdSchemaElement(resourceType);
                 assertNull("Found schema in " + resource, xsdSchemaElement);
             }
         }
@@ -296,7 +297,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismObject<ResourceType> resourceAfter = resource.asPrismObject();
         XmlSchemaType xmlSchemaTypeAfter = resourceAfter.asObjectable().getSchema();
         assertNull("Resource contains schema after partial configuration test", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceAfter);
         assertNull("Resource contains schema after partial configuration test", resourceXsdSchemaElementAfter);
         assertNull("Resource contains capabilities after partial configuration test", resource.getCapabilities());
 
@@ -318,8 +319,11 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     }
 
     private int getSizeOfConnectorCache() {
-        return connectorManager.getStateInformation().stream().filter(
-                state -> ConnectorManager.CONNECTOR_INSTANCE_CACHE_NAME.equals(state.getName())).findFirst().get().getSize();
+        return connectorManager.getStateInformation().stream()
+                .filter(state -> ConnectorManager.CONNECTOR_INSTANCE_CACHE_NAME.equals(state.getName()))
+                .findFirst()
+                .orElseThrow()
+                .getSize();
     }
 
     @Test
@@ -353,11 +357,11 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> instanceId = resource.asPrismObject().findProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         "instanceId"));
         @NotNull PrismContainerValue<Containerable> confPropertiesContainer = resource.asPrismObject().findContainer(
                 ItemPath.create(ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME)).getValue();
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME)).getValue();
         confPropertiesContainer.remove(instanceId);
 
         assertNotNull("No connector ref", resource.getConnectorRef());
@@ -382,7 +386,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismObject<ResourceType> resourceAfter = resource.asPrismObject();
         XmlSchemaType xmlSchemaTypeAfter = resourceAfter.asObjectable().getSchema();
         assertNull("Resource contains schema after partial configuration test", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceAfter);
         assertNull("Resource contains schema after partial configuration test", resourceXsdSchemaElementAfter);
         assertNull("Resource contains capabilities after partial configuration test", resource.getCapabilities());
 
@@ -482,7 +486,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         XmlSchemaType xmlSchemaTypeAfter = resourceTypeRepoAfter.getSchema();
         assertNotNull("No schema after test connection", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceTypeRepoAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceTypeRepoAfter);
         assertNotNull("No schema after test connection", resourceXsdSchemaElementAfter);
 
         IntegrationTestTools.displayXml("Resource XML", resourceRepoAfter);
@@ -493,7 +497,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertNotNull("No serialNumber", cachingMetadata.getSerialNumber());
 
         Element xsdElement = ObjectTypeUtil.findXsdElement(xmlSchemaTypeAfter);
-        ResourceSchema parsedSchema = ResourceSchemaParser.parse(xsdElement, resourceTypeBefore.toString());
+        ResourceSchema parsedSchema = ResourceSchemaFactory.parseNativeSchemaAsBare(xsdElement);
         assertNotNull("No schema after parsing", parsedSchema);
 
         // schema will be checked in next test
@@ -551,10 +555,10 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> supportValidity = resource.findOrCreateProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         "supportValidity"));
 
-        supportValidity.setRealValue(Boolean.valueOf((String)getRealValue(supportValidity)) ? false : true);
+        supportValidity.setRealValue(!Boolean.parseBoolean((String) getRealValue(supportValidity)));
 
         List<String> expectedSuggestions =
                 List.of(getSuggestionForProperty(resource, "instanceId"),
@@ -575,9 +579,12 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 .as("suggested properties")
                 .hasSize(1);
         suggestions.forEach(suggestion -> {
-            Collection<?> suggestionValues = suggestion.getDefinition().getSuggestedValues().stream()
-                    .map(displayVal -> displayVal.getValue()).collect(Collectors.toList());
-            assertTrue("Unexpected value of suggestion " + suggestion.getDefinition().getSuggestedValues() + ", expected: " + expectedSuggestions,
+            Collection<?> suggestionValues = requireNonNull(suggestion.getDefinition().getSuggestedValues()).stream()
+                    .map(displayVal -> displayVal.getValue())
+                    .toList();
+            //noinspection SuspiciousMethodCalls
+            assertTrue(
+                    "Unexpected value of suggestion " + suggestion.getDefinition().getSuggestedValues() + ", expected: " + expectedSuggestions,
                     expectedSuggestions.containsAll(suggestionValues));
         });
 
@@ -602,8 +609,9 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 return  ((RawType) property.getRealValue()).getValue();
             } catch (SchemaException e) {
                 //ignore exception
-                PrimitiveXNode primitiveXNode = ((PrimitiveXNode)((MapXNode) ((RawType) property.getRealValue())
-                        .getXnode()).get(new QName("clearValue")));
+                var primitiveXNode = ((PrimitiveXNode<?>)
+                        ((MapXNode) ((RawType) property.getRealValue()).getXnode())
+                                .get(new QName("clearValue")));
                 if (primitiveXNode != null) {
                     return primitiveXNode.getStringValue();
                 }
@@ -618,7 +626,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> property = resource.findProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         propertyName));
         Object value = null;
         if (property != null) {
@@ -636,6 +644,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         when();
         resource = provisioningService.getObject(ResourceType.class, RESOURCE_DUMMY_OID, null, task, result);
         resourceBean = resource.asObjectable();
+        resourceInitialized = true;
 
         then();
         assertSuccess(result);
@@ -646,20 +655,19 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         PrismContainer<Containerable> configurationContainer = resource.findContainer(ResourceType.F_CONNECTOR_CONFIGURATION);
         assertNotNull("No configuration container", configurationContainer);
-        PrismContainerDefinition confContDef = configurationContainer.getDefinition();
+        var confContDef = configurationContainer.getDefinition();
         assertNotNull("No configuration container definition", confContDef);
-        PrismContainer configurationPropertiesContainer = configurationContainer
-                .findContainer(SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_QNAME);
+        var configurationPropertiesContainer = configurationContainer.findContainer(SchemaConstants.ICF_CONFIGURATION_PROPERTIES_NAME);
         assertNotNull("No configuration properties container", configurationPropertiesContainer);
-        PrismContainerDefinition confPropsDef = configurationPropertiesContainer.getDefinition();
+        var confPropsDef = configurationPropertiesContainer.getDefinition();
         assertNotNull("No configuration properties container definition", confPropsDef);
-        Collection<PrismProperty<?>> configurationProperties = configurationPropertiesContainer.getValue().getItems();
+        var configurationProperties = configurationPropertiesContainer.getValue().getItems();
         assertFalse("No configuration properties", configurationProperties.isEmpty());
-        for (PrismProperty<?> confProp : configurationProperties) {
-            PrismPropertyDefinition confPropDef = confProp.getDefinition();
+        for (var confProp : configurationProperties) {
+            var confPropDef = confProp.getDefinition();
             assertNotNull("No definition for configuration property " + confProp, confPropDef);
             assertFalse("Configuration property " + confProp + " is raw", confProp.isRaw());
-            assertConfigurationProperty(confProp);
+            assertConfigurationProperty((PrismProperty<?>) confProp);
         }
 
         // The useless configuration variables should be reflected to the resource now
@@ -684,21 +692,17 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         expect("The returned type should have the schema pre-parsed");
         assertTrue(ResourceSchemaFactory.hasParsedSchema(resourceBean));
 
-        // Also test if the utility method returns the same thing
-        ResourceSchema returnedSchema = ResourceSchemaFactory.getRawSchema(resourceBean);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean);
+        displayDumpable("Parsed complete schema", completeSchema);
 
-        displayDumpable("Parsed resource schema", returnedSchema);
+        assertCompleteSchemaCached(completeSchema, ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean));
+        rememberCompleteResourceSchema(completeSchema);
 
-        // Check whether it is reusing the existing schema and not parsing it
-        // all over again
-        // Not equals() but == ... we want to really know if exactly the same
-        // object instance is returned
-        assertTrue("Broken caching",
-                returnedSchema == ResourceSchemaFactory.getRawSchema(resourceBean));
+        BareResourceSchema bareSchema = ResourceSchemaFactory.getBareSchema(resourceBean);
+        rememberBareResourceSchema(bareSchema);
 
-        assertSchemaSanity(returnedSchema, resourceBean);
+        assertBareSchemaSanity(bareSchema, resourceBean);
 
-        rememberResourceSchema(returnedSchema);
         assertSteadyResource();
         dummyResource.assertConnections(4);
         assertDummyConnectorInstances(1);
@@ -709,14 +713,12 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         // GIVEN
 
         // WHEN
-        ResourceSchema refinedSchema = ResourceSchemaFactory.getCompleteSchema(resourceBean);
-        displayDumpable("Refined schema", refinedSchema);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean);
+        displayDumpable("Refined schema", completeSchema);
 
-        // Check whether it is reusing the existing schema and not parsing it all over again
-        // Not equals() but == ... we want to really know if exactly the same object instance is returned
-        assertSame("Broken caching", refinedSchema, ResourceSchemaFactory.getCompleteSchema(resourceBean));
+        assertCompleteSchemaCached(completeSchema, ResourceSchemaFactory.getCompleteSchema(resourceBean));
 
-        ResourceObjectDefinition accountDef = refinedSchema.findDefaultDefinitionForKind(ShadowKindType.ACCOUNT);
+        ResourceObjectDefinition accountDef = completeSchema.findDefaultDefinitionForKind(ShadowKindType.ACCOUNT);
         assertNotNull("Account definition is missing", accountDef);
         assertNotNull("Null identifiers in account", accountDef.getPrimaryIdentifiers());
         assertFalse("Empty identifiers in account", accountDef.getPrimaryIdentifiers().isEmpty());
@@ -724,7 +726,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertFalse("Empty secondary identifiers in account", accountDef.getSecondaryIdentifiers().isEmpty());
         assertNotNull("No naming attribute in account", accountDef.getNamingAttribute());
         assertFalse("No nativeObjectClass in account",
-                StringUtils.isEmpty(accountDef.getObjectClassDefinition().getNativeObjectClass()));
+                StringUtils.isEmpty(accountDef.getObjectClassDefinition().getNativeObjectClassName()));
 
         ResourceObjectTypeDefinition accountTypeDef = accountDef.getTypeDefinition();
         assertNotNull("Account type definition is missing", accountTypeDef);
@@ -777,15 +779,16 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertThat(weaponDef.getTypeName())
                 .as("weapon type name")
                 .isEqualTo(DOMUtil.XSD_STRING);
-        ResourceAttributeDefinition<?> rawWeaponDef = weaponDef.getRawAttributeDefinition();
-        assertThat(rawWeaponDef.getMatchingRuleQName())
-                .as("weapon matching rule in the raw definition")
-                .isNull();
-        assertThat(rawWeaponDef.getTypeName())
-                .as("weapon type name in the raw definition")
-                .isEqualTo(DOMUtil.XSD_STRING);
+        // FIXME???
+//        ResourceAttributeDefinition<?> rawWeaponDef = weaponDef.getNativeDefinition();
+//        assertThat(rawWeaponDef.getMatchingRuleQName())
+//                .as("weapon matching rule in the raw definition")
+//                .isNull();
+//        assertThat(rawWeaponDef.getTypeName())
+//                .as("weapon type name in the raw definition")
+//                .isEqualTo(DOMUtil.XSD_STRING);
 
-        rememberRefinedResourceSchema(refinedSchema);
+        rememberRefinedResourceSchema(completeSchema);
 
         assertSteadyResource();
         dummyResource.assertConnections(4);
@@ -804,13 +807,15 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         // The returned type should have the schema pre-parsed
         assertTrue(ResourceSchemaFactory.hasParsedSchema(resourceBean));
 
-        // Also test if the utility method returns the same thing
-        ResourceSchema returnedSchema = ResourceSchemaFactory.getRawSchema(resourceBean);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchema(resourceBean);
+        displayDumpable("Parsed complete schema", completeSchema);
 
-        displayDumpable("Parsed resource schema", returnedSchema);
-        assertSchemaSanity(returnedSchema, resourceBean);
+        var bareSchema = ResourceSchemaFactory.getBareSchema(resourceBean);
 
-        assertResourceSchemaUnchanged(returnedSchema);
+        // The sanity is checked against the bare schema; it was this way before 4.9, and the asserts are written for this
+        assertBareSchemaSanity(bareSchema, resourceBean);
+
+        assertNativeSchemaCached(bareSchema);
         assertSteadyResource();
     }
 
@@ -936,7 +941,6 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     @Test
     public void test029CapabilitiesRepo() throws Exception {
         // GIVEN
-        Task task = getTestTask();
         OperationResult result = createOperationResult();
 
         // WHEN
@@ -1033,7 +1037,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 resourceManager.getConfiguredConnectorInstance(
                         resourceBean, ReadCapabilityType.class, false, result);
         assertNotNull("No configuredConnectorInstance", configuredConnectorInstance);
-        ResourceSchema resourceSchema = ResourceSchemaFactory.getRawSchema(resource);
+        ResourceSchema resourceSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resource);
         assertNotNull("No resource schema", resourceSchema);
 
         // WHEN
@@ -1055,7 +1059,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertTrue("Configurations not equivalent", configurationContainer.equivalent(configurationContainerAgain));
 
         // Check resource schema caching
-        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getRawSchema(resourceAgain);
+        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getCompleteSchemaRequired(resourceAgain);
         assertNotNull("No resource schema (again)", resourceSchemaAgain);
         assertTrue("Resource schema was not cached", resourceSchema == resourceSchemaAgain);
 
@@ -1112,7 +1116,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 resourceManager.getConfiguredConnectorInstance(
                         resourceBean, ReadCapabilityType.class, false, result);
         assertNotNull("No configuredConnectorInstance", configuredConnectorInstance);
-        ResourceSchema resourceSchema = ResourceSchemaFactory.getRawSchema(resource);
+        ResourceSchema resourceSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resource);
         assertNotNull("No resource schema", resourceSchema);
 
         // WHEN
@@ -1131,7 +1135,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 .findContainer(ResourceType.F_CONNECTOR_CONFIGURATION);
         assertTrue("Configurations not equivalent", configurationContainer.equivalent(configurationContainerAgain));
 
-        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getRawSchema(resourceAgain);
+        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getCompleteSchemaRequired(resourceAgain);
         assertNotNull("No resource schema (again)", resourceSchemaAgain);
         assertTrue("Resource schema was not cached", resourceSchema == resourceSchemaAgain);
 
@@ -1297,17 +1301,21 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         ProvisioningContext ctx = provisioningContextFactory.createForShadowCoordinates(coords, task, result);
 
         // WHEN
-        AttributesToReturn attributesToReturn = ctx.createAttributesToReturn();
+        ShadowItemsToReturn shadowItemsToReturn = ctx.createAttributesToReturn();
 
         // THEN
-        displayValue("attributesToReturn", attributesToReturn);
-        assertFalse("wrong isReturnDefaultAttributes", attributesToReturn.isReturnDefaultAttributes());
-        Collection<String> attrs = new ArrayList<>();
-        for (ResourceAttributeDefinition<?> attributeToReturnDef : attributesToReturn.getAttributesToReturn()) {
-            attrs.add(attributeToReturnDef.getItemName().getLocalPart());
-        }
+        displayValue("attributesToReturn", shadowItemsToReturn);
+        assertFalse("wrong isReturnDefaultAttributes", shadowItemsToReturn.isReturnDefaultAttributes());
+        var attrsToGet = shadowItemsToReturn.getItemsToReturn().stream()
+                .map(itemDef -> itemDef.getItemName().getLocalPart())
+                .toList();
+
         // No "members" attribute here
-        PrismAsserts.assertSets("Wrong attribute to return", attrs, "uid", "name", "description", "cc");
+        List<String> expectedValues = new ArrayList<>(List.of("uid", "name", "description", "cc"));
+        if (nativeAssociations) {
+            expectedValues.add(DummyDefaultScenario.Group.LinkNames.GROUP.local());
+        }
+        PrismAsserts.assertSets("Wrong attribute to return", attrsToGet, expectedValues);
 
         assertSteadyResource();
     }
@@ -1562,7 +1570,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         ObjectModificationType accountDeltaBean =
                 PrismTestUtil.parseAtomicValue(MODIFY_WILL_FULLNAME_FILE, ObjectModificationType.COMPLEX_TYPE);
         ObjectDelta<ShadowType> accountDelta =
-                DeltaConvertor.createObjectDelta(accountDeltaBean, ShadowType.class, prismContext);
+                DeltaConvertor.createObjectDelta(accountDeltaBean, ShadowType.class);
 
         when();
         provisioningService.applyDefinition(accountDelta, task, result);
@@ -1639,6 +1647,14 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 "No account/default definition in %s", resourceBean);
     }
 
+    @NotNull ResourceObjectDefinition getGroupDefaultDefinition() throws SchemaException, ConfigurationException {
+        return MiscUtil.stateNonNull(
+                Resource.of(resourceBean)
+                        .getCompleteSchemaRequired()
+                        .findDefinitionForObjectClass(RI_GROUP_OBJECT_CLASS),
+                "No group definition in %s", resourceBean);
+    }
+
     protected @NotNull Collection<? extends QName> getCachedAccountAttributes() throws SchemaException, ConfigurationException {
         return getAccountDefaultDefinition().getAllIdentifiersNames();
     }
@@ -1650,6 +1666,8 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         then();
         dummyResource.assertNoConnections();
+
+        resourceShutDown = true;
     }
 
     protected void checkAccountWill(
@@ -1709,7 +1727,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                     }
                 }
 
-                assertProvisioningAccountShadow(shadow.asPrismObject(), resourceBean, ResourceAttributeDefinition.class);
+                assertProvisioningAccountShadow(shadow.asPrismObject(), ResourceAttributeDefinition.class);
             }
         };
     }
@@ -1755,21 +1773,21 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertNull("Unexpected password value in repo shadow " + shadowRepo, passwordValue);
     }
 
-    protected ResourceAttributeDefinition<?> getAccountAttrDef(String name) throws SchemaException {
+    protected ResourceAttributeDefinition<?> getAccountAttrDef(String name) throws SchemaException, ConfigurationException {
         return requireNonNull(
                 getAccountObjectClassDefinition().findAttributeDefinition(name));
     }
 
-    protected ResourceAttributeDefinition<?> getAccountAttrDef(QName name) throws SchemaException {
+    protected ResourceAttributeDefinition<?> getAccountAttrDef(QName name) throws SchemaException, ConfigurationException {
         return requireNonNull(
                 getAccountObjectClassDefinition().findAttributeDefinition(name));
     }
 
     @NotNull
-    private ResourceObjectClassDefinition getAccountObjectClassDefinition() throws SchemaException {
+    private ResourceObjectClassDefinition getAccountObjectClassDefinition() throws SchemaException, ConfigurationException {
         ResourceSchema resourceSchema =
                 requireNonNull(
-                        ResourceSchemaFactory.getRawSchema(resource));
+                        ResourceSchemaFactory.getCompleteSchemaRequired(resource));
         return requireNonNull(
                 resourceSchema.findObjectClassDefinition(RI_ACCOUNT_OBJECT_CLASS));
     }
